Fix horizontal scroll main area

--- a/content/scss/_c-navbar.scss
+++ b/content/scss/_c-navbar.scss
@@ -54,6 +54,7 @@
   overflow-y: hidden;
   display: flex;
   z-index: 61;
+  position: relative;
 
   .c-toolbar__left,
   .c-toolbar__right {
